--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "next": "12.0.7",
+    "mobx": "^6.3.12",
+    "mobx-react": "^7.2.1",
+    "mobx-react-lite": "^3.2.3",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "^8.3.2"
