--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,7 +25,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.css"
   ],
   "exclude": [
     "node_modules"
