--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-calendar": "^3.4.4",
     "axios": "^0.24.0",
     "mobx": "^6.3.12",
     "mobx-react": "^7.2.1",
     "mobx-react-lite": "^3.2.3",
     "next": "^12.0.7",
     "react": "17.0.2",
+    "react-calendar": "^3.6.0",
     "react-dom": "17.0.2",
     "uuid": "^8.3.2"
   },
