--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-calendar": "^3.6.0",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
