--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/react-calendar": "^3.4.4",
     "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "mobx": "^6.3.12",
     "mobx-react": "^7.2.1",
     "mobx-react-lite": "^3.2.3",
